crates/bityzba/tests/ui/fail/enum_unknown_variant_invariant.rs
use bityzba::invariant;

#[invariant(::Named => true)]
#[invariant(::Missing => true)]
enum Choice {
    Named { name: String },
}

fn main() {}
