crates/bityzba/tests/ui/fail/enum_unknown_variant_invariant.stderr
error: unknown enum variant `Missing` in invariant
 --> tests/ui/fail/enum_unknown_variant_invariant.rs:4:15
  |
4 | #[invariant(::Missing => true)]
  |               ^^^^^^^
